--- a/SEM 3/Assignment_2/question10.html
+++ b/SEM 3/Assignment_2/question10.html
@@ -28,7 +28,7 @@
                 <dd>A programming language used to add interactivity to a web page.</dd><br>
                 <ul type="disc">
                     <li>Handles events</li>
-                    <li>Updates content dynamiv=cally</li>
+                    <li>Updates content dynamically</li>
                     <li>Validates forms</li>
                 </ul>
             </li>
