--- a/SEM 3/Assignment_4/question2.html
+++ b/SEM 3/Assignment_4/question2.html
@@ -9,7 +9,7 @@
     <pre>
     |    Name       |    Age  |    City      | Occupation  |    Country   | 
     |---------------|---------|--------------|-------------|--------------|     
-    |    Amrapali   |    30   |   Jaipur     | Jaipur      |    India     |
+    |    Amrapali   |    30   |   Jaipur     | Engineer      |    India     |
     |    Shikha     |    25   |   kolkata    | Designer    |    India     |
     |    Charlie    |    28   |   Mumbai     | Teacher     |    India     |
     |    Neha       |    35   |   Bangalore  | Developer   |    India     |
